# solspace-alpha-submit

./: .gitignore  Anchor.toml  BLOCKCHAIN-INTEGRATION.md  FREE-TIER-SETUP.md  NETLIFY-DEPLOYMENT.md  README.md  SONIC-Documentation.md  autoprefixer-test.css  build-and-deploy.sh  clean-repo.sh  deploy-full-system.sh  deploy-keypair.json  direct-account-create.js  direct-counter-init.js  final-solution.js  fix-correct-program-id.js  netlify-deploy.sh  netlify.toml  next.config.ts  package-lock.json  package.json  solspace-keypair.json  tailwind.config.js  test-autoprefixer.js  workspace.json
free/: connection-config.ts  integrated-app-tsx.ts  setup-instructions.md  simplified-app-context.ts  simplified-notification-service.ts  simplified-viral-detector.ts  sonic-wallet-button.ts  updated-viral-config.ts  viralConfig.ts  wallet-adapter-config.ts
netlify/build-scripts/: setup-prisma-for-build.cjs
netlify/plugins/: prisma-plugin.js
prisma/: schema.prisma
program/: Cargo.toml  package-lock.json  program-keypair.json  solspace-keypair.json
program/src/: contract_implementation.rs  lib.rs  lib.rs.backup
public/: robots.txt  sitemap.xml
public/images/: HomePageLogo.png:Zone.Identifier
scripts/: convert-keypair.js  deploy-free-tier.sh  deploy-sonic.sh  extract-idl.js  extract-idl.ts  initialize-counter.js  interact-with-sonic.ts  mint-viral-nft.js  netlify-prebuild.js  run-free-tier.sh
src/app/: globals.css  layout.tsx  page.tsx
src/config/: sonic.config.ts  (+1 more)
tests/: test-db.ts  test-free-mode.js  test-service-modes.ts  test-twitter-api.js  verify-free-mode.js
(+94 files in other folders)
