[package]
name = "solspace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solspace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = []

[dependencies]
anchor-lang = { version = "=0.27.0", features = ["init-if-needed"] }
anchor-spl = "=0.27.0"
solana-program = "=1.14.17"
getrandom = { version = "0.2.10", features = ["custom"] }
